--- a/services/frontend/styles/globals.css
+++ b/services/frontend/styles/globals.css
@@ -8,7 +8,7 @@
 	}
 
 	body * {
-		@apply focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-space-950 focus:ring-violet-500;
+		@apply focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-slate-950 focus:ring-primary-500;
 	}
 
 	.animate-sonar {
@@ -17,7 +17,7 @@
 		@apply absolute -z-10;
 		@apply h-full w-full;
 		@apply -translate-x-1/2 -translate-y-1/2;
-		@apply bg-violet-700;
+		@apply bg-primary-700;
 		@apply rounded-full;
 	}
 
