--- a/services/frontend/styles/globals.css
+++ b/services/frontend/styles/globals.css
@@ -2,9 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+.text-sm {
+	line-height: inherit;
+}
+
 @layer base {
 	body {
-		line-height: 1.5;
+		line-height: 1.65;
 	}
 
 	body * {
