--- a/services/frontend/styles/globals.css
+++ b/services/frontend/styles/globals.css
@@ -12,7 +12,7 @@
 	}
 
 	body * {
-		@apply focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-slate-950 focus:ring-primary-500;
+		@apply focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-primary-500/20 focus:ring-primary-500;
 	}
 
 	.animate-sonar {
