--- a/services/frontend/styles/globals.css
+++ b/services/frontend/styles/globals.css
@@ -15,6 +15,15 @@
 		@apply focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-primary-500/20 focus:ring-primary-500;
 	}
 
+	strong {
+		@apply font-semibold;
+	}
+
+	.link {
+		@apply text-primary-500;
+		@apply hover:text-primary-300;
+	}
+
 	.animate-sonar {
 		animation: sonar 1.5s ease-in-out infinite;
 
